--- a/playbook.yml
+++ b/playbook.yml
@@ -25,7 +25,7 @@
 
   vars:
     nginx_vhosts:
-      - listen: "80 http2"
+      - listen: "443 ssl http2"
         server_name: "rcelko.ch"
         #root: "/var/www/example.com"
         #index: "index.php index.html index.htm"
